# meshi

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json
.cache/clangd/index/: base.hpp.59FB46FEFDD28BB1.idx  engine.hpp.71AB0BA9C17363BC.idx  error.hpp.98A1A2BC61A55053.idx  event.hpp.216BCFE4511ED3E5.idx  main.cpp.053A46EF5D95F513.idx  meshi.hpp.F2D3885279ECFDCA.idx  meshi_c_api.h.EA2AFE443C7687A4.idx  renderables.hpp.A6AAE6CE891AE77B.idx  result.hpp.F8F74A043EFE5110.idx  slice.hpp.15E022929880439F.idx  world.hpp.FFCEB4B5CDF08E8C.idx
cmake/: meshi_rs.cmake
meshi-rs/: Cargo.toml
meshi-rs/src/: lib.rs
meshi-rs/src/object/: mod.rs
meshi-rs/src/physics/: mod.rs
meshi-rs/src/render/: event.rs  mod.rs  scene.rs
meshi-rs/src/render/database/: geometry.rs  geometry_primitives.rs  images.rs  json.rs  material.rs  mod.rs
meshi-rs/src/utils/: timer.rs
sample_app_dir/database/geometry/: db.json
src/api/: CMakeLists.txt
src/api/meshi/: backend.hpp  c_api_types.hpp  engine.hpp  graphics.hpp  meshi.hpp  meshi_c_api.h  physics.hpp  world.hpp
src/api/meshi/bits/: action.hpp  base.hpp  camera.hpp  component.hpp  denizen.hpp  event.hpp  meshi_c_api.h  meshi_loader.cpp  meshi_loader.hpp  renderables.hpp
src/api/meshi/bits/components/: actor_component.hpp  base.hpp  camera_component.hpp  directional_light_component.hpp  physics_component.hpp
src/api/meshi/bits/objects/: actor.hpp  base.hpp
src/examples/: CMakeLists.txt
src/examples/hello_engine/: main.cpp
src/examples/hello_lighting/: main.cpp
